--- a/cn_densenet/context_normalization.ipynb
+++ b/cn_densenet/context_normalization.ipynb
@@ -340,7 +340,7 @@
         ")\n",
         "\n",
         "# Train the DenseNet-40 model\n",
-        "history = model_densenet40.fit(train_gen,\n",
+        "history = model_.fit(train_gen,\n",
         "                     steps_per_epoch=x_train.shape[0] // batch_size, epochs=epochs,\n",
         "                     validation_data=((x_val, context_val), y_val), callbacks=[keras.callbacks.LearningRateScheduler(lr_schedule), checkpoint_callback])\n"
       ],
@@ -354,7 +354,7 @@
       "cell_type": "code",
       "source": [
         "# Evaluate the model\n",
-        "loss, accuracy, top_5_accuracy, precision, recall, f1 = model_densenet40.evaluate((x_test, context_test), y_test)\n",
+        "loss, accuracy, top_5_accuracy, precision, recall, f1 = model_.evaluate((x_test, context_test), y_test)\n",
         "print(f\"Test loss : {loss}\")\n",
         "print(f\"Test accuracy : {round(accuracy * 100, 2)}%\")\n",
         "print(f\"Test top 5 accuracy : {round(top_5_accuracy * 100, 2)}%\")\n",
@@ -381,7 +381,7 @@
       "cell_type": "code",
       "source": [
         "# Create DenseNet with 100 Conv layers\n",
-        "model_densenet40 = DenseNet(16)"
+        "model_densenet100 = DenseNet(16)"
       ],
       "metadata": {
         "id": "Zs1s3nXikimY"
